# contact_analysis

./: Readme.md
ar_contact/: CMakeLists.txt  package.xml  setup.py
ar_contact/src/ar_contact/: ar_contact_class.py
ar_contact_launch/: CMakeLists.txt  package.xml
ar_contact_launch/config/: default.rviz
ar_contact_launch/launch/: rviz.launch  wrench_from_csv.launch
contact_analysis/: CMakeLists.txt  README.md  package.xml  setup.py
contact_analysis/cfg/: contact_cop.cfg  contact_evaluate.cfg  wrench_from_csv.cfg
contact_analysis/launch/: skeleton.launch
contact_analysis/model/: contact_analysis.ros_package
contact_analysis/scripts/: contact_cop  contact_evaluate  wrench_from_csv
contact_analysis/src/contact_analysis/: contact_cop_impl.py  contact_cop_ros.py  contact_evaluate_impl.py  contact_evaluate_ros.py  wrench_from_csv_impl.py  wrench_from_csv_ros.py
contact_cop/: CMakeLists.txt  README.md  package.xml
contact_cop/cfg/: contact_cop_study.cfg  wrench_from_csv.cfg
contact_cop/model/: contact_cop.ros_package
contact_cop/scripts/: contact_cop_study  wrench_from_csv
contact_cop/src/contact_cop/: contact_cop_study_impl.py  contact_cop_study_ros.py  wrench_from_csv_impl.py  wrench_from_csv_ros.py
contact_def/: CMakeLists.txt  package.xml  setup.py
contact_def/src/contact_def/: ar_basic_class.py  ar_contact_class.py  ar_contact_set.py
contact_msgs/: CMakeLists.txt  package.xml
contact_msgs/action/: EvaluateContact.action  LearnContact.action
contact_msgs/msg/: PointArray.msg
contact_msgs/srv/: SetString.srv
contact_plot/: CMakeLists.txt  package.xml  setup.py
contact_plot/src/contact_plot/: contact_plot.py
contact_test_data/: CMakeLists.txt  Readme.md  package.xml
contact_test_data/data/: wrench0_sample.csv  wrench4_sample.csv
contact_test_data/launch/: skeleton_fake_data.launch  wrench_from_csv_test.launch
